# ChangeLog for media-sound/sonic-visualiser
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/sonic-visualiser/ChangeLog,v 1.4 2008/03/21 22:58:21 aballier Exp $

  21 Mar 2008; Alexis Ballier <aballier@gentoo.org>
  -files/sonic-visualiser-1.0-loarg.patch, -sonic-visualiser-1.0.ebuild:
  remove old

*sonic-visualiser-1.2 (28 Feb 2008)

  28 Feb 2008; Alexis Ballier <aballier@gentoo.org>
  +sonic-visualiser-1.2.ebuild:
  version bump

  04 Jan 2008; Stefan Briesenick <sbriesen@gentoo.org>
  sonic-visualiser-1.0.ebuild:
  added ~x86 keyword

*sonic-visualiser-1.0 (18 Nov 2007)

  18 Nov 2007; Alexis Ballier <aballier@gentoo.org>
  +files/sonic-visualiser-1.0-loarg.patch, +metadata.xml,
  +sonic-visualiser-1.0.ebuild:
  initial import, ebuild greatly inspired from the proaudio overlay
