@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST sonic-visualiser-1.2.tar.bz2 1188601 RMD160 277fd3cf2eb10a7654394e700464cef1ae045579 SHA1 f350a9c76f5873be8dbaf99b1f3ed82d07ffb248 SHA256 45ca7a899e86b1b41a1025eca5ad3a851de25305f6fcaed403832d542035d007
-EBUILD sonic-visualiser-1.2.ebuild 1995 RMD160 aea179ea6496a5eece23f8ecf0df30d7e030077d SHA1 33e4cb1b180fe0605430f0ed6ad1c71c968a3d18 SHA256 f5b6d969135df3c0b7d15ac4358bc03bbec785aac8c29d33a16980034670c768
-MISC ChangeLog 863 RMD160 2e13aa800af60c3db581134fdf44f25a6e9ed008 SHA1 577a512f28bf01c6a2796aae7db5b76b45a8c0c7 SHA256 2798e2645f19e9bd87f7226cd0a5ccffc4c6e1a97fe1f88b9f2578f6b7689e38
+EBUILD sonic-visualiser-1.2.ebuild 2028 RMD160 53d19b5cf374aab8b1c9613c5775a0bb97468f09 SHA1 a03e6d5b741d6c761d035f14a6da0685a3fad5f8 SHA256 96c8a3ac2df94e003ef557c5f489cd64652d76e20cad149f86593bb1901db98b
+MISC ChangeLog 1043 RMD160 52a97b210842f8930889e57b5f8df76bdef01291 SHA1 5ad1f5b3011fcc971738106bbeb84d1299af5a4e SHA256 e178385840c3be2ab74740c75242517da65840fbb04c77f7985d0c0a5cbc978c
 MISC metadata.xml 161 RMD160 2738d17827a71b5ccbadae4c4f909d2b57d147b0 SHA1 90201ddb830142147774cc7b7b5178fbd0a9af0c SHA256 0ba191421eefd954d1efe9f6c3384e8c8d7455d35a7e79457272e1c29211b09e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.9 (GNU/Linux)
 
-iD8DBQFH5D2ZvFcC4BYPU0oRAjlsAKCjXfgLN49JpB+aXvS+1sj/TD/mLQCdGGtX
-JIKmo04eqZ8V4AL7b/nWEZs=
-=nv6V
+iEYEARECAAYFAkgCkaEACgkQvFcC4BYPU0pKWACfQDlQDLAEdZMy3gEX5seorimb
+GbQAn3WfoxjuVpgYPo8Cp6rdMvN6jSzY
+=blB9
 -----END PGP SIGNATURE-----
